[plugins] PluginDownloader#myChannel property added #(KMA-404, IDEA-292021) fixed
reverts: e38496de5e74fc5844ca1feb965dee10523cffdf, a78d3a32371e2df8abba1c827c2295b59583dca4
(cherry picked from commit de1b1776d05ecbf048bc109ab9ea5af23ff2041d)

IJ-CR-23336

(cherry picked from commit 64e96b6f5eb1133ca55ac313e18235175909e381)

GitOrigin-RevId: 947bb960f769906fefebbbdea935a67bd0280f81