@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.updateSettings.impl;
 
 import com.intellij.application.options.RegistryManager;
@@ -34,9 +34,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.util.Date;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Consumer;
 
 public final class PluginDownloader {
@@ -377,8 +375,9 @@ public final class PluginDownloader {
                                                            @Nullable String host,
                                                            @Nullable BuildNumber buildNumber) throws IOException {
     String url = descriptor instanceof PluginNode && host != null ?
-                 getDownloadUrl((PluginNode)descriptor, host) :
-                 getUrl(descriptor.getPluginId(), buildNumber);
+                 toAbsoluteUrl(((PluginNode)descriptor).getDownloadUrl(), host) :
+                 getMarketplaceBuildUrl(descriptor, buildNumber);
+
     return new PluginDownloader(descriptor,
                                 url,
                                 buildNumber,
@@ -410,21 +409,34 @@ public final class PluginDownloader {
     return node;
   }
 
-  private static String getDownloadUrl(PluginNode pluginNode, String host) throws IOException {
-    String url = pluginNode.getDownloadUrl();
+  private static @NotNull String toAbsoluteUrl(@NotNull String downloadUrl,
+                                               @NotNull String host) throws IOException {
     try {
-      return new URI(url).isAbsolute() ? url : new URL(new URL(host), url).toExternalForm();
+      return new URI(downloadUrl).isAbsolute() ?
+             downloadUrl :
+             new URL(new URL(host), downloadUrl).toExternalForm();
     }
     catch (URISyntaxException e) {
       throw new IOException(e);
     }
   }
 
-  private static String getUrl(PluginId pluginId, @Nullable BuildNumber buildNumber) {
+  private static @NotNull String getMarketplaceBuildUrl(@NotNull IdeaPluginDescriptor descriptor,
+                                                        @Nullable BuildNumber buildNumber) {
+    Map<String, String> parameters = new LinkedHashMap<>();
+    parameters.put("id", descriptor.getPluginId().getIdString());
+    parameters.put("build", ApplicationInfoImpl.orFromPluginsCompatibleBuild(buildNumber));
+    parameters.put("uuid", getMarketplaceDownloadsUUID());
+
+    if (descriptor instanceof PluginNode) {
+      String channel = ((PluginNode)descriptor).getChannel();
+      if (channel != null) {
+        parameters.put("channel", channel);
+      }
+    }
+
     return Urls.newFromEncoded(ApplicationInfoImpl.getShadowInstance().getPluginsDownloadUrl())
-      .addParameters(Map.of("id", pluginId.getIdString(),
-                            "build", ApplicationInfoImpl.orFromPluginsCompatibleBuild(buildNumber),
-                            "uuid", getMarketplaceDownloadsUUID()))
+      .addParameters(Collections.unmodifiableMap(parameters))
       .toExternalForm();
   }
 }
